--- a/readme.org
+++ b/readme.org
@@ -1,3 +1,5 @@
+#+html: <p align="center"><img src="https://img.shields.io/static/v1?label=Emacs&message=inside&color=green&style=plastic&logo=GNU-emacs&logoColor=green" /></p>
+
 * Configuração Doom emacs
 
 #+begin_src bash
